Corrección del metodo Main y ordenes personalizada, prototipo y gestionOrdenes