@@ -1,22 +1,21 @@
 package Sesion1.Reto1;
 
 import java.util.List;
-import java.util.Arrays;
 
 
 public class Main {
     public static void main(String[] args) {
-        List<OrdenMasa> ordenMasas = Arrays.asList(
+        List<OrdenMasa> ordenMasas = List.of(
                 new OrdenMasa("OM001", 100),
                 new OrdenMasa("OM002", 200)
         );
 
-        List<OrdenPersonalizada> ordenPersonalizadas = Arrays.asList(
+        List<OrdenPersonalizada> ordenPersonalizadas = List.of(
                 new OrdenPersonalizada("OP001", 50, "Cliente A"),
                 new OrdenPersonalizada("OP002", 75, "Cliente B")
         );
 
-        List<OrdenPrototipo> ordenPrototipos = Arrays.asList(
+        List<OrdenPrototipo> ordenPrototipos = List.of(
                 new OrdenPrototipo("OP001", 50, "Fase 1"),
                 new OrdenPrototipo("OP002", 75, "Fase 2")
         );
@@ -27,7 +26,7 @@ public class Main {
         mostrarOrdenes(ordenPrototipos);
 
         // Procesar órdenes personalizadas
-        procesarPersonalizadas(ordenPersonalizadas, 20);
+        GestionOrdenes.OrdenProduccion.procesarPersonalizadas(ordenPersonalizadas, 10);
 
         // Mostrar resumen de órdenes personalizadas después de procesar
         System.out.println("Resumen de órdenes personalizadas después de procesar:");
@@ -35,20 +34,8 @@ public class Main {
 
         System.out.println("\n Termina el programa de gestión de órdenes.");
     }
-
-    // Método para mostrar órdenes de masa
-    public static void mostrarOrdenes(List<? extends Object> ordenes) {
-        for (Object orden : ordenes) {
-            System.out.println(orden);
-        }
+    public static void mostrarOrdenes(List<? extends GestionOrdenes.OrdenProduccion> ordenes) {
+        GestionOrdenes.OrdenProduccion.mostrarOrdenes(ordenes);
     }
 
-    // Método para procesar órdenes personalizadas
-    public static void procesarPersonalizadas(List<OrdenPersonalizada> ordenes, int cantidadProcesar) {
-        for (OrdenPersonalizada orden : ordenes) {
-            // Aquí puedes agregar la lógica para procesar la orden, por ejemplo:
-            int nuevaCantidad = orden.getCantidad() - cantidadProcesar;
-            orden.setCantidad(nuevaCantidad > 0 ? nuevaCantidad : 0);
-        }
-    }
 }
